<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/add" android:icon="@android:drawable/ic_menu_add" app:showAsAction="always"   android:title="@string/add"/>-->
    <!--<item-->
        <!--android:id="@+id/reset" android:icon="@android:drawable/ic_menu_revert" app:showAsAction="always|withText" android:title="@string/reset"/>-->
    <item
        android:id="@+id/myAccount"  app:showAsAction="never" android:title="@string/my_account">
    </item>
    <item
        android:id="@+id/addDevice"  app:showAsAction="never" android:title="@string/add_device">
    </item>
    <item
        android:id="@+id/signOut"  app:showAsAction="never" android:title="@string/sign_out">
    </item>
</menu>