<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvDevice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview14"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/serial_number"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvSerialNumber"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevice" />

    <TextView
        android:id="@+id/tvSerialNumber"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textview14"
        app:layout_constraintTop_toBottomOf="@+id/tvDevice" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/battery_level"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvBattery"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSerialNumber" />

    <TextView
        android:id="@+id/tvBattery"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tvSerialNumber" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/operator"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvOperator"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvOperator"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tvBattery" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/firmware"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvVersion"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvOperator" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/internet"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvInternet"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/tvVersion" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end|center_vertical"
        android:padding="@dimen/_4sdp"
        android:text="@string/audio_prompt"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvInternet"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/cbAudioPrompt"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:checked="true"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/tvInternet" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_4sdp"

        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSetupCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInternet" />

    <Button
        android:id="@+id/btnSetupCamera"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/login_btn_bg"
        android:padding="@dimen/_4sdp"
        android:text="Setup Camera"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSetupInstallation"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/tvInternet" />
    <Button
        android:id="@+id/btnSetupInstallation"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/login_btn_bg"
        android:padding="@dimen/_4sdp"
        android:text="Setup Installation"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSetupCamera"
        app:layout_constraintTop_toBottomOf="@+id/tvInternet" />

    <ProgressBar
        android:id="@+id/pbProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

</android.support.constraint.ConstraintLayout>